<resources>
    <string name="app_name">GardenShop</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="btn_purchase">Order</string>
    <string name="btn_purchase2">Order Now</string>
    <string name="rincian_produk">Rincian Produk</string>
    <string name="colon">:</string>
    <string name="stok">Stok</string>
    <string name="ukuran">Ukuran</string>
    <string name="ukuran_cm">Ukuran (cm)</string>
    <string name="bahan">Bahan</string>
    <string name="detail2">detail2</string>
    <string name="foto">Foto</string>
    <string name="star">star</string>
    <string name="nama_product">Nama Product</string>
    <string name="terjualangka">terjualangka</string>
    <string name="terjual">Terjual</string>
    <string name="rp">Rp</string>
    <string name="angka">4</string>
    <string name="delivery_available">Free Ongkir</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="checkout">Checkout</string>
    <string name="image_splashscreen">splashscreen</string>
</resources>