<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:enabled="true"
        android:visible="true"/>
    <item
        android:id="@+id/ic_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_face_24"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true"/>
    <item
        android:id="@+id/ic_about"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"/>

</menu>