<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_circular_border"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/small"
    android:layout_marginTop="20dp"
    android:layout_marginVertical="10dp"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/xsmall"
        android:layout_marginVertical="@dimen/xsmall"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/previewIcon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/foto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_produk"
                android:maxLines="2"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/harga_produk"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_circular_background"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:layout_marginVertical="@dimen/small">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="@dimen/xsmall"
                    android:src="@drawable/star_clr"
                    android:contentDescription="@string/star" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_available"
                android:layout_marginTop="30dp"
                android:layout_gravity="end"
                android:drawablePadding="@dimen/xsmall"
                app:drawableLeftCompat="@drawable/ic_baseline_local_shipping_24" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>