<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".DetailActivity"
    tools:ignore="ContentDescription">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/previewIcon"
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <include
        android:id="@+id/include"
        layout="@layout/price_review_title_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:background="@drawable/detail_background">

        <TableLayout
            android:id="@+id/detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/rincian_produk"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/stok"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/stok2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="5dp"
                    android:text="@string/stok"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/ukuran"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/size2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="5dp"
                    android:text="@string/ukuran_cm"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/bahan"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bahan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="5dp"
                    android:text="@string/bahan"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/detail2"
                android:id="@+id/keterangan2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="32dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnkeranjang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:src="@drawable/ic_baseline_add_shopping_cart_24"
                android:paddingVertical="12dp"
                android:paddingHorizontal="@dimen/medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_background"
                android:text="@string/btn_purchase"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>