<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/xsmall">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_product"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/xsmall"
                android:src="@drawable/star_clr"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/xsmall"
                android:src="@drawable/star_clr"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/xsmall"
                android:src="@drawable/star_clr"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/xsmall"
                android:src="@drawable/star_clr"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="@dimen/xsmall"
                android:src="@drawable/star_grey"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/sold2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terjualangka"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/sold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/terjual"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/productPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:text="@string/rp"
        android:gravity="right"
        android:background="@drawable/grey_circular_border"
        android:padding="@dimen/xsmall"
        android:layout_marginLeft="@dimen/medium"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginRight="10dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>